<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:id="@+id/user_layout"
   >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/user_exit_ibtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@null"
            android:src="@mipmap/exit" />

        <ImageButton
            android:id="@+id/user_setting_ibtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:src="@mipmap/setting" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.8">

        <ImageView
            android:id="@+id/user_img"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:background="@null"
            android:src="@mipmap/user" />

        <Button
            android:id="@+id/user_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_img"
            android:layout_centerHorizontal="true"
            android:background="@null"
            android:text="@string/login"
            android:textColor="@color/white" />

    </RelativeLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/user_recycler"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="3" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.1">

        <TextView
            android:id="@+id/txt_single_space"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/single_space"
            android:textColor="@color/white"
            android:textSize="@dimen/text_small_middle_size" />

        <TextView
            android:id="@+id/owspace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_single_space"
            android:layout_centerHorizontal="true"
            android:text="@string/owspace"
            android:textColor="@color/white"
            android:textSize="@dimen/text_small__size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/owspace"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/top_small_distance"
            android:text="@string/version"
            android:textColor="@color/white"
            android:textSize="@dimen/text_small_size"/>

    </RelativeLayout>


</LinearLayout>
